// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui/tui visual snapshots awaiting approval frame snapshot (input required) 1`] = `
"● Mission Control  テキスト統計ユーティリティの追加  Time 5m 42s  Input 12000  Cached 2500  Output …
● AWAITING_APPROVAL [███████████████░░░░░░░░░░░░░░░] 2/4 (50%) | WORKER m1-f2                       
╔══════════════════════════════════════════════════════════════════════════════════════════════════╗
║ Overview                                                                                         ║
║ MISSION SUMMARY                                         │ FEATURES                             … ║
║ ● m1-f2 Implement parser and CLI options                │ ● m1 Core                            … ║
║                                                         │  ✓ m1-f1 Read files                  … ║
║ Milestone  m1 Core                                      │ >● m1-f2 Implement parser and CLI opt… ║
║ State      awaiting_approval                            │ ○ m2 Validation                      … ║
║ Activity   Running m1-f2...                             │  ○ m2-f1 Run validations             … ║
║ Progress   2/4 (50%)                                    │                                      … ║
║ Branch     melos/mission/m1-f2                          │ RECENT EVENTS                        … ║
║                                                         │ Approval pending (press y to start)  … ║
║ Expected Behavior                                       │ 09:00:00 mission run started         … ║
║   Implement parser and CLI options                      │ 09:00:05 Planning mission...         … ║
║                                                         │ 09:00:10 worker #1 started           … ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝











入力待ち  承認待ち: y=承認 / Ctrl+C=中止                                                            
[INPUT] 承認待ち: y=承認 / Ctrl+C=中止                                                              "
`;

exports[`ui/tui visual snapshots initializing frame snapshot 1`] = `
"● Mission Control  テキスト統計ユーティリティの追加         Time 0m 00s  Input 0  Cached 0  Output 0
● INITIALIZING [░░░░░░░░░░] 0/0 (0%)                                                                
Initializing mission runtime...                                                                     
                                                                                                    
Waiting for first status update from orchestrator.                                                  
This usually appears in a few seconds.                                                              
                                                                                                    
If this does not change:                                                                            
1. Confirm PRD.md exists                                                                            
2. Confirm TASK.json is valid MissionPlan v2                                                        
3. Press Ctrl+C to abort and re-run                                                                 
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
Ctrl+C Abort  Waiting for first state update...                                                     
melos> initializing...                                                                              "
`;

exports[`ui/tui visual snapshots narrow terminal snapshot (80x24) 1`] = `
"● Mission Control  テキスト統計ユーティリティの追加  Time 5m 42s  Input 12000  …
● RUNNING [███████████████░░░░░░░░░░░░░░░] 2/4 (50%) | WORKER m1-f2             
╔══════════════════════════════════════════════════════════════════════════════╗
║ Overview                                                                     ║
║ MISSION SUMMARY                             │ FEATURES                     … ║
║ ● m1-f2 Implement parser and CLI options    │  ✓ m1-f1 Read files          … ║
║                                             │ >● m1-f2 Implement parser and… ║
║ Milestone  m1 Core                          │ ○ m2 Validation              … ║
║ State      running                          │  ○ m2-f1 Run validations     … ║
║ Activity   Running m1-f2...                 │                              … ║
║ Progress   2/4 (50%)                        │ RECENT EVENTS                … ║
║ Branch     melos/mission/m1-f2              │ Detailed logs are available i… ║
║                                             │ 09:00:00 mission run started … ║
║ Expected Behavior                           │ 09:00:05 Planning mission... … ║
║   Implement parser and CLI options          │ 09:00:10 worker #1 started   … ║
╚══════════════════════════════════════════════════════════════════════════════╝






Tab Next  Shift+Tab Prev  F/W/M/D/T View  P Pause  R Resume  Ctrl+G Steer  Esc …
melos> Running m1-f2...  (Ctrl+G steer)                                         "
`;

exports[`ui/tui visual snapshots overview frame snapshot 1`] = `
"● Mission Control  テキスト統計ユーティリティの追加  Time 5m 42s  Input 12000  Cached 2500  Output …
● RUNNING [███████████████░░░░░░░░░░░░░░░] 2/4 (50%) | WORKER m1-f2                                 
╔══════════════════════════════════════════════════════════════════════════════════════════════════╗
║ Overview                                                                                         ║
║ MISSION SUMMARY                                         │ FEATURES                             … ║
║ ● m1-f2 Implement parser and CLI options                │ ● m1 Core                            … ║
║                                                         │  ✓ m1-f1 Read files                  … ║
║ Milestone  m1 Core                                      │ >● m1-f2 Implement parser and CLI opt… ║
║ State      running                                      │ ○ m2 Validation                      … ║
║ Activity   Running m1-f2...                             │  ○ m2-f1 Run validations             … ║
║ Progress   2/4 (50%)                                    │                                      … ║
║ Branch     melos/mission/m1-f2                          │ RECENT EVENTS                        … ║
║                                                         │ Detailed logs are available in Logs v… ║
║ Expected Behavior                                       │ 09:00:00 mission run started         … ║
║   Implement parser and CLI options                      │ 09:00:05 Planning mission...         … ║
║                                                         │ 09:00:10 worker #1 started           … ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝











Tab Next  Shift+Tab Prev  F/W/M/D/T View  P Pause  R Resume  Ctrl+G Steer  Esc Overview             
melos> Running m1-f2...  (Ctrl+G steer)                                                             "
`;

exports[`ui/tui visual snapshots workers frame snapshot 1`] = `
"● Mission Control  テキスト統計ユーティリティの追加  Time 5m 42s  Input 12000  Cached 2500  Output …
● RUNNING [███████████████░░░░░░░░░░░░░░░] 2/4 (50%) | WORKER m1-f2                                 
NOW RUNNING  WORKER #1  m1-f2  model=gpt-5.3-codex  elapsed=1m 12s  Lines 1-5/5
────────────────────────────────────────────────────────────────────────────────────────────────────
────────── LOG START: PLANNING ──────────
09:00:00 [PLAN_CREATED] milestones=2 features=4
────────── SWITCH: PLANNING -> WORKER ──────────
09:00:10 [READ] src/parser.ts
09:00:11 [BASH] npm test -- parser



















Tab Next  Shift+Tab Prev  F/W/M/D/T View  ↑↓/PgUp/PgDn/Home/End Scroll  L Focus  P Pause  R Resume …
melos> Running m1-f2...  (Ctrl+G steer)                                                             "
`;
